Fiz modificações no código

--- a/index.html
+++ b/index.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOja de bolsas</title>
+    <title>Loja de bolsas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div>
-    <header>
-        <h1>Bag store</h1>
-        <nav class="containerheader">
-            <ul>
-                <li>
-                    <a href="#sobre">Sobre a Loja</a>
-                </li>
-                <li>
-                    <a href="#produtos">Produtos</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+   <header>
+    <div class="containerheader">
+        <header>
+            <h1>Bag Store</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#Sobre">Sobre a loja</a>
+                    </li>
+                    <li>
+                        <a href="#produtos">Produtos</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
     </div>
-    <div>
-        <section class="container">
-            <img src="./img/pexels-alex-pelsh-5721338.jpg" alt="LOja de bolsas">
-            <div class="sobre2">
-                <h2>Sobre a Loja</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque dolorum magni, aliquam consequuntur amet ad dolores porro architecto velit excepturi perferendis, eum ducimus eligendi doloremque adipisci nihil libero minima aut?</p>
-            </div>
-        </section>
-    </div>
-    <h2 class="product">Produtos</h2>
+   </header>
+   <div class="container">
     <section>
-       <article>
-        <img src="./img/bolsa1.jpg" alt="Bolsa de mão">
-        <h3>Bolsa de mão</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit odit incidunt est consequatur sit commodi. Quod cum fugit, odio praesentium, atque ut ipsam cumque distinctio consectetur, aliquam placeat autem labore!</p>
+        <img src="./img/pexels-alex-pelsh-5721338.jpg" alt="Imagem da loja">
+        <div class="sobre2">
+            <h2>Sobre a loja</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet esse vel dolorum voluptatem natus distinctio dolorem, necessitatibus tenetur itaque ratione, quasi, quo eius officia? Laudantium, neque! Voluptates adipisci ipsum itaque.</p>
+        </div>
+    </section>
+   </div> 
+   <h2 class="product">Produtos</h2>
+   <section id="produtos">
+    <article>
+        <img src="./img/bolsa1.jpg" alt="Bolsa social">
+        <h3>Bolsa Social</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspi</p>
         <button type="button">Compre agora</button>
-       </article>
-       <article>
+    </article>
+    <article>
         <img src="./img/bolsa2.jpg" alt="Bolsa carteira">
         <h3>Bolsa carteira</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit odit incidunt est consequatur sit commodi. Quod cum fugit, odio praesentium, atque ut ipsam cumque distinctio consectetur, aliquam placeat autem labore!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspi</p>
         <button type="button">Compre agora</button>
-       </article>
-       <article>
-        <img src="./img/bolsa3.jpg" alt="Bolsa social">
-        <h3>Bolsa social</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit odit incidunt est consequatur sit commodi. Quod cum fugit, odio praesentium, atque ut ipsam cumque distinctio consectetur, aliquam placeat autem labore!</p>
+    </article>
+    <article>
+        <img src="./img/bolsa3.jpg" alt="Bolsa elegante">
+        <h3>Bolsa elegante</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspi</p>
         <button type="button">Compre agora</button>
-       </article>
-       <article>
-        <img src="./img/bolsa4.jpg" alt="Bolsa sport">
-        <h3>Bolsa sport</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit odit incidunt est consequatur sit commodi. Quod cum fugit, odio praesentium, atque ut ipsam cumque distinctio consectetur, aliquam placeat autem labore!</p>
+    </article>
+        <article>
+            <img src="./img/bolsa4.jpg" alt="Bolsa simples">
+        <h3>Bolsa simples</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspi</p>
         <button type="button">Compre agora</button>
-       </article>
-    </section>
+        </article>
+   </section>
 </body>
 </html>
